# Substrate-Solidity

./: .env  .gitignore  Cargo.toml  ERC20.sol  ERC721.sol  README.MD  README.md  baobuakeo.sol  build.rs  chainlink.sol  contracts...KEO_BUA_BAO.sol  data.json  demo.sol  hardhat.config.js  hardhat.config.ts  login.txt  lorem_ipsum.txt  package-lock.json  package.json  simplesmartcontract.sol  truffle-config.js
Faucet/: package-lock.json  package.json
Nft_marketplace/: package-lock.json  package.json  truffle-config.js
Projects_full/: Cargo.toml
Rider/: README.md  config.js  package.json
Tutorial1/: main
Tutorial10_EnumType/: main.rs  main.rs.save
channel/: channel_1.go  channel_2.go  channel_3.go  channel_4.go
contracts/: Auction.sol  CarStore.sol  NftMarket.sol  Token.sol  metadata.json
demo/: Cargo.toml
demo/rust/: Cargo.toml
demo/rust/src/: http_request.rs  main.rs  reqwest.rs
docker/: Dockerfile  docker-compose.yaml
goroutine/: 1.channel.go  2.2goroutine.go  2.no_goroutine.go  3.parallelism.go  4.goroutine.go  5.scheduler.go  6.channels.go
helloW/: hardhat.config.js  package-lock.json  package.json
http/: client.go  server.go
learnconcept/: array.go  go.mod  hello.go  main.go  method.go  slice.go
manager_students/: Cargo.toml
metamask/: package.json
migrations/: 1_nftmarket_migration.js
pages/: _app.js  index.js
parsing-json/: Cargo.toml
present_1/: .env.example
present_2/: Cargo.toml  account.txt  procedure.txt
present_2/src/: main.rs
present_2/src/student_list/: database.rs  mod.rs  sorts.rs  students_list.rs  thread_or_something.rs
sample/: Cargo.toml
sample/src/: main.rs
sample/src/manager/: file_helper.rs  mod.rs  school_manager.rs
sample/src/model/: student.rs
sample/src/resources/: students.json  users.json
scripts/: deploy.js  deploy.ts  propose.ts  run.js
src/: casting.rs  constant.rs  db_connection.rs  demo.rs  enum.rs  file_demo.rs  fromAndInto.rs  hashmap_demo.rs  hello.txt  inference.rs  literal.rs  main.rs  model.rs  mutability.rs  scopeAndShadowing.rs  service.rs  structure.rs  traits_demo.rs  tryFromAndInto.rs
student-management/: Cargo.toml
styles/: globals.css
substrate-node-template/: Cargo.toml  Guide run Private Network.md  Launch  Node-key.md  RD.md  customSpec.json  customSpecRaw.json  (+3 more)
(+300 files in other folders)
