[package]
name = "grpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tonic = { version = "0.6"  , features = ["tls"] }
bytes = "0.4"
prost = "0.9"
prost-derive = "0.9"
prost-types = "0.9.0"
tokio = { version = "1", features = [ "time", "fs", "macros", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.2"
http = "0.2"
tower = "0.3"
redis = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
console = "0.9.0"


# Database(Postgresql)


postgres = { version = "0.17", features = ["with-chrono-0_4"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

# Help you use gRPC protobuf files in Rust.
[build-dependencies]
tonic-build = "0.6"

