[package]
name = "present_2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.75"
reqwest = { version = "0.11", features = ["json","blocking"] }

tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"


lazy_static = "1.4.0"
regex = "1.5.4"
hyper = "0.14.16"