[package]
name = "rust_present"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }

tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"

serde = {version="1.0.132", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5.4"